BW and Flogo chart changes for 1.9.0 release

--- a/charts/dp-bwce-app/templates/deployment.yaml
+++ b/charts/dp-bwce-app/templates/deployment.yaml
@@ -57,6 +57,10 @@ spec:
       serviceAccountName: {{ .Values.serviceAccountName }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      {{- with .Values.hostAliases }}
+      hostAliases:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       - env:
         - name: TIBCO_INTERNAL_APP_ID
