--- a/charts/dp-flogo-app/values.yaml
+++ b/charts/dp-flogo-app/values.yaml
@@ -17,8 +17,9 @@ appConfig:
   workloadType: "user-app"
   appVersion: "1.0.0"
   originalAppName: ""
-  flogoBuildTypeTag: "2.25.6-b243"
-  flogoBaseImageTag: "2.25.6-b243"
+  flogoBuildTypeTag: "2.25.6-b251"
+  flogoBaseImageTag: "2.25.6-b251"
+  customFQImage: ""
   tags: ""
   connectors: ""
   lastUpdated: ""
