Publishing tp-cp-cli 1.9.0 rc1

--- a/charts/tp-cp-cli/templates/post-extraction-job.yaml
+++ b/charts/tp-cp-cli/templates/post-extraction-job.yaml
@@ -77,7 +77,7 @@ spec:
                   tpcliversionStr=$tpcliversionStr"   \"Platforms\": ["
                   platformStr=""
                   for platform in $(ls "$tpcliversion") ; do
-                    installer=$(find "$tpcliversion""$platform"  -name '*.gz')
+                    installer=$(find "$tpcliversion""$platform"  -name '*.*')
                     installer=$basePath$installer
                     arch=${platform#*-}
                     arch=$(echo $arch | tr 'a-z' 'A-Z')
