--- a/charts/dp-config-aws/charts/crossplane-components/values.yaml
+++ b/charts/dp-config-aws/charts/crossplane-components/values.yaml
@@ -180,7 +180,8 @@ claims:
       # provide for creating primary / stand-alone cluster
       # databaseName: "postgres"
       dbInstanceClass: "db.t3.medium"
-      dbParameterGroupFamily: "aurora-postgresql14"
+      #dbParameterGroupFamily: "aurora-postgresql14"
+      dbClusterParameterGroupName: "default.aurora-postgresql16"
       enablePerformanceInsights: false
       engine: "aurora-postgresql"
       engineVersion: "14.11"
