--- a/charts/dp-configure-namespace/values.yaml
+++ b/charts/dp-configure-namespace/values.yaml
@@ -31,6 +31,7 @@ rbac:
   # RBACs for different capabilities
   # Default value is true. Possible values are true, false
   bwce: true
+  bw5ce: true
   flogo: true
   ems: true
   pulsar: true
