--- a/charts/jaeger/templates/es-lookback-cronjob.yaml
+++ b/charts/jaeger/templates/es-lookback-cronjob.yaml
@@ -6,7 +6,7 @@
 #
 
 {{ if .Values.esLookback.enabled }}
-apiVersion: {{ include "common.capabilities.cronjob.apiVersion" $ }}
+apiVersion: {{ include "jaeger.capabilities.cronjob.apiVersion" . }}
 kind: CronJob
 metadata:
   name: {{ include "jaeger.fullname" . }}-es-lookback
