--- a/charts/jaeger/templates/hotrod-ing.yaml
+++ b/charts/jaeger/templates/hotrod-ing.yaml
@@ -5,10 +5,10 @@
 #
 {{ if .Values.hotrod.enabled -}}
   {{- if .Values.hotrod.ingress.enabled -}}
-  {{- $ingressSupportsIngressClassName := eq (include "common.ingress.supportsIngressClassname" .) "true" }}
+  {{- $ingressSupportsIngressClassName := eq (include "jaeger.ingress.supportsIngressClassname" .) "true" }}
   {{- $serviceName := include "jaeger.fullname" . -}}
   {{- $servicePort := .Values.hotrod.service.port -}}
-apiVersion: {{ include "common.capabilities.ingress.apiVersion" $ }}
+apiVersion: {{ include "jaeger.capabilities.ingress.apiVersion" . }}
 kind: Ingress
 metadata:
   name: {{ include "jaeger.fullname" . }}-hotrod
@@ -30,7 +30,7 @@ spec:
         paths:
           - path: /
             pathType: {{ default "ImplementationSpecific" $.Values.hotrod.ingress.pathType }}
-            backend: {{- include "common.ingress.backend" (dict "serviceName" (printf "%s-hotrod" $serviceName) "servicePort" $servicePort "context" $) | nindent 14 }}
+            backend: {{- include "jaeger.ingress.backend" (dict "serviceName" (printf "%s-hotrod" $serviceName) "servicePort" $servicePort "context" $) | nindent 14 }}
   {{- end -}}
   {{- if .Values.hotrod.ingress.tls }}
   tls:
