--- a/charts/dp-core-infrastructure/charts/tp-tibtunnel/templates/deployment.yaml
+++ b/charts/dp-core-infrastructure/charts/tp-tibtunnel/templates/deployment.yaml
@@ -27,6 +27,9 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       {{- end }}
+      {{- if .Values.global.tibco.serviceAccount }}
+      serviceAccountName: {{ .Values.global.tibco.serviceAccount }}
+      {{- end }}
       containers:
       - name: tibtunnel
         image: {{ include "tp-tibtunnel.image.registry" .}}{{"/"}}{{ include "tp-tibtunnel.image.repository" .}}{{"/"}}{{ .Values.image.name }}:{{ .Values.image.tag}}
