--- a/charts/jaeger/templates/collector-ing.yaml
+++ b/charts/jaeger/templates/collector-ing.yaml
@@ -5,10 +5,10 @@
 #
 
 {{ if .Values.collector.ingress.enabled -}}
-{{- $ingressSupportsIngressClassName := eq (include "common.ingress.supportsIngressClassname" .) "true" }}
+{{- $ingressSupportsIngressClassName := eq (include "jaeger.ingress.supportsIngressClassname" .) "true" }}
 {{- $defaultServicePort := .Values.collector.service.http.port -}}
 {{- $basePath := .Values.collector.basePath -}}
-apiVersion: {{ include "common.capabilities.ingress.apiVersion" $ }}
+apiVersion: {{ include "jaeger.capabilities.ingress.apiVersion" . }}
 kind: Ingress
 metadata:
   name: {{ template "jaeger.collector.name" . }}
@@ -35,7 +35,7 @@ spec:
             pathType: {{ default "ImplementationSpecific" $.Values.collector.ingress.pathType }}
             {{- $servicePortString := (include "jaeger.collector.ingressServicePort" (dict "defaultServicePort" $defaultServicePort "context" .)) }}
             {{- $servicePort := default $servicePortString ($servicePortString | float64) }}
-            backend: {{- include "common.ingress.backend" (dict "serviceName" (include "jaeger.collector.name" $) "servicePort" $servicePort "context" $) | nindent 14 }}
+            backend: {{- include "jaeger.ingress.backend" (dict "serviceName" (include "jaeger.collector.name" $) "servicePort" $servicePort "context" $) | nindent 14 }}
   {{- end -}}
   {{- if .Values.collector.ingress.tls }}
   tls:
