--- a/charts/bwprovisioner/values.yaml
+++ b/charts/bwprovisioner/values.yaml
@@ -25,6 +25,8 @@ global:
         ingressClassName: nginx
         ingressController: nginx
         annotations: {}
+      activationServer:
+        url: ""
 
     logging:
       # The fluentbit configuration section.
