--- a/charts/dp-bwce-app/values.yaml
+++ b/charts/dp-bwce-app/values.yaml
@@ -10,6 +10,7 @@ dpConfig:
   capabilityVersion: ""
   capabilityDefaultNamespace: ""
   helmRepoAlias: ""
+  activationServiceUrl: ""
 
 appConfig:
   appId: ""
