--- a/charts/tp-cp-bwce-recipes/values.yaml
+++ b/charts/tp-cp-bwce-recipes/values.yaml
@@ -9,11 +9,24 @@ capabilities:
     # set to true for latest version of recipe
     isLatest: "true"
     # Timestamp of capability release
-    releaseDate: "2025/07/30"
+    releaseDate: "2025/08/30"
     # Either a link to document or the document itself specifying _what was fixed in this release.
     releaseNotes: "#cshid=new_features"
     # helm chart and image version for bwprovisioner, default helm chart version is latest
     bwprovisioner:
+      version: ""
+      tag: "46"
+  bw5ce:
+    # if set to true then existing recipe will be overwritten by latest recipe.
+    overwriteRecipe: "true"
+    # set to true for latest version of recipe
+    isLatest: "true"
+    # Timestamp of capability release
+    releaseDate: "2025/08/30"
+    # Either a link to document or the document itself specifying _what was fixed in this release.
+    releaseNotes: "#cshid=new_features"
+    # helm chart and image version for bwprovisioner, default helm chart version is latest
+    bw5provisioner:
       version: ""
       tag: "46"
   bwadapter:
@@ -22,7 +35,7 @@ capabilities:
     # set to true for latest version of recipe
     isLatest: "true"
     # Timestamp of capability release
-    releaseDate: "2025/07/30"
+    releaseDate: "2025/08/30"
     # Either a link to document or the document itself specifying _what was fixed in this release.
     releaseNotes: "#cshid=new_features"
     # helm chart and image version for bwprovisioner, default helm chart version is latest
