--- a/charts/tp-cp-integration-bw/charts/bw-webserver/templates/bw-webserver.yaml
+++ b/charts/tp-cp-integration-bw/charts/bw-webserver/templates/bw-webserver.yaml
@@ -83,6 +83,8 @@ spec:
           name: bw5
         - containerPort: 3002
           name: bw6
+        - containerPort: 3003
+          name: bw5ce
         {{- with $.Values.probes.startupProbe }}
         startupProbe:
           {{- toYaml . | nindent 10 }}
