--- a/charts/tp-cp-integration/values.yaml
+++ b/charts/tp-cp-integration/values.yaml
@@ -9,5 +9,7 @@ tp-cp-integration-flogo:
   enabled: true
 tp-cp-bwce-utilities:
   enabled: true
+tp-cp-bw5ce-utilities:
+  enabled: true
 tp-cp-flogo-utilities:
   enabled: true
