update download link for cli i cp-cli charts

--- a/charts/platform-base/charts/tp-cp-cli/templates/cp-cli-card.yaml
+++ b/charts/platform-base/charts/tp-cp-cli/templates/cp-cli-card.yaml
@@ -64,7 +64,7 @@ spec:
                   finalStr=$finalStr"   {"
                   finalStr=$finalStr"   \"Name\": \"TIBCO Platform CLI\","
                   finalStr=$finalStr"   \"Description\": \"Accelerate operations with the TIBCO Platform CLI, this utility will allow you to create & manage the TIBCO Platform in a scripted and repeatable way.\","
-                  finalStr=$finalStr"   \"RedirectLink\": \"https://www.tibco.com/downloads\","
+                  finalStr=$finalStr"   \"RedirectLink\": \"https://www.tibco.com/downloads/12407\","
                   finalStr=$finalStr"   \"BuildDate\":\"$(date "+%Y-%m-%dT%H:%M:%S%Z")\""
                   finalStr=$finalStr"   }"
               finalStr=$finalStr"]"
